--- a/views/Registration_Form.ejs
+++ b/views/Registration_Form.ejs
@@ -39,12 +39,12 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Restaurant:</label>
-								<input type="text" name="restaurant" class="form-control" placeholder="Enter your restaurant name">
+								<input type="text" name="name" class="form-control" placeholder="Enter your restaurant name">
 							</div>
 
 							<div class="col-lg-6">
 								<label>Business phone:</label>
-								<input type="text" name="business_phone" class="form-control" placeholder="Enter your business phone">
+								<input type="text" name="phoneNumber" class="form-control" placeholder="Enter your business phone">
 							</div>
 							
 						</div>
@@ -59,12 +59,12 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>First name:</label>
-								<input type="text" name="fname" class="form-control" placeholder="Enter your first name">
+								<input type="text" name="ownerFirstName" class="form-control" placeholder="Enter your first name">
 							</div>
 
 							<div class="col-lg-6">
 								<label>Last name:</label>
-								<input type="text" name="lname" class="form-control" placeholder="Enter your last name">
+								<input type="text" name="ownerLastName" class="form-control" placeholder="Enter your last name">
 							</div>
 							
 						</div>
@@ -72,12 +72,12 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Title:</label>
-								<input type="text" name="title" class="form-control" placeholder="Enter your title">
+								<input type="text" name="ownerTitle" class="form-control" placeholder="Enter your title">
 							</div>
 
 							<div class="col-lg-6">
 								<label>E-mail:</label>
-								<input type="text" name="email" class="form-control" placeholder="Enter your E-mail">
+								<input type="text" name="ownerEmail" class="form-control" placeholder="Enter your E-mail">
 							</div>
 							
 						</div>
@@ -86,7 +86,7 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Phone number:</label>
-								<input type="text" name="phone" class="form-control" placeholder="Enter your phone number">
+								<input type="text" name="ownerPhoneNumber" class="form-control" placeholder="Enter your phone number">
 							</div>
 
 							<div class="col-lg-6">
