--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,6 +5,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/stylesheets/landing.css"
     </head>
 
     <body>
@@ -13,8 +14,14 @@
             <p class="lead">Connecting Torontonians to local food stops in Scarborough</p>
             <hr class="my-4">
             <p>New or Returning user?</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>
-            <a class="btn btn-success btn-lg" href="#" role="button">Log In</a>
+            <span id="customerBtns">
+                <a class="btn btn-primary" href="#" role="button">Customer Sign Up</a>
+                <a class="btn btn-success" href="#" role="button">Customer Login In</a>
+            </span>
+            <span id="restaurantBtns">
+                <a class="btn btn-primary" href="/restaurantSignup/" role="button">Restaurant Sign Up</a>
+                <a class="btn btn-success" href="/restuarantProfile/:restaurant" role="button">Restaurant Login In</a>
+            </span>
         </div>
 
         <!-- CSS only for bootstrap--> 
