Committing front end html feature code to upload a photo.

--- a/views/PhotoUpload.ejs
+++ b/views/PhotoUpload.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-	<title>Personal Stories</title>
+	<title>Photo Upload</title>
+
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <!-- jQuery library -->
@@ -11,7 +13,7 @@
 
 <style type="text/css">
 	#ui{
-		background-color: #333;
+		background-color: #C0C0C0;
 		padding:30px;
 		margin-top: 20px;
 		border-radius: 10px;
@@ -22,9 +24,14 @@
 	}
 </style>
 
-</head>
-<body>
+		
 
+</head>
+
+<body>
+	
+
+	
 	<div class="container">
 
 		<div class="row">
@@ -32,16 +39,14 @@
 			<div class="col-lrg-3"></div>
 			<div class="col-lrg-6">
 				<div id="ui">
-					<h1 class="text-center">Personal Stories</h1>
+					<h1 class="text-center">Photo Upload</h1>
 					<br>
 					<form class="form-group">
 
 						<br>
-
-						<label>Input any stories or personal anecdotes you want displayed </label>
 						<br>
 						<br>
-						<textarea name="ownerEmail" rows="10" cols="155"></textarea>
+						<input type="file" id="read-file" />
 						<br>
 						<br>
 
@@ -60,4 +65,6 @@
 	</div>
 
 </body>
+
+
 </html>
