End to End functionality for creating and seeing a restaurant is complete, have to wait for the media section to be completed.

--- a/views/Registration_Form.ejs
+++ b/views/Registration_Form.ejs
@@ -34,7 +34,7 @@
 				<div id="ui">
 					<h1 class="text-center">REGISTRATION FORM</h1>
 					<br>
-					<form action="/makeRestaurant/" class="form-group">
+					<form action="/makeRestaurant" method="POST" class="form-group">
 
 						<div class="row">
 							<div class="col-lg-6">
