--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -1,85 +1,103 @@
-    <html>
-
-
-        <head>
-
-            <title>restaurant</title>
-            <!-- JS, Popper.js, and jQuery (Bootstrap files) -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-             <link rel="stylesheet" href="/stylesheets/profilePage.css">
-        </head>
-
-        <body>
-        <div class="jumbotron">
-            <div class = "container d-flex flex-column justify-content-start">
-                <h1 class="display-10 text-center">Restaurant Page </h1>
-                <hr class="my-10" color="black" >
-                <div class =" d-flex flex-row align-items-start justify-content-around ">
-                    <div class = "d-flex flex-column justify-content-between border">
-                        <div class="card" style="width: 20rem;">
-                            <img class="card-img-top" src="https://www.w3schools.com/images/picture.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Contact Us </h5>
-                                <p class="card-text">Phone: </p>
-                                <p class="card-text">Email: </p>
-                                <p class="card-text">Website: </p>
-                                <a href="#" class="btn btn-primary">order Now</a>
-                            </div>
-                        </div>
-                        <div class =" d-flex flex-row align-items-baseline justify-content-start ">
-                            <p > More</p>
-                            <hr width = 250 color=#666;>
-                        </div>
-                        <h2> BASING</h2>
-                        <p> 123123 street </p>
-                        <p> Earth 2020 </p>
-                        <div class =" d-flex flex-row align-items-baseline ">
-                            <p > Location</p>
-                            <hr class="my-10" width = 250 color=#666;>
-                        </div>
-                        <h2> BASING</h2>
-                        <p> 123123 street </p>
-                        <p> Earth 2020 </p>
-                    </div>
-                        <div class = "d-flex flex-column">
-                            <h1> Restaurant : <%= people.name %> </h1>
-                            <p> Email:</p>
-                             <p> phone:</p>
-                             <p> Website: </p>
-                             <div class = "d-flex flex-row align-items-center ">
-                                <h1>Star Rating </h1>
-                                <span class="fa fa-star checked ml-3"></span>
-                                 <span class="fa fa-star checked ml-3"></span>
-                                  <span class="fa fa-star checked ml-3"></span>
-                                  <span class="fa fa-star ml-3"></span>
-                                  <span class="fa fa-star ml-3"></span>
-                        </div>
-                        <div class = "d-flex flex-column justify-content-between">
-                            <div class = "d-flex flex-row align-items-center justify-content-start">
-                                <a class="btn btn-primary btn-lg" href="#" role="button">About </a>
-                                <a class="btn btn-primary btn-lg" href="#" role="button">More</a>
-                             </div>
-                        </div>
-                        <hr class="my-10" width = 500px color=#666;>
-                        <div class = "d-flex flex-row align-items-center justify-content-between">
-                            <h1> History </h1>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Edit </a>
-                        </div>
-                         <hr class="my-10" width = 500px color=#666;>
-                <div class = "d-flex flex-row align-items-center justify-content-between">
-                    <h1> Stories </h1>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Edit </a>
-                </div>
+<html>
+   <head>
+      <title>restaurant</title>
+      <!-- JS, Popper.js, and jQuery (Bootstrap files) -->
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="/stylesheets/profilePage.css">
+   </head>
+   <body>
+      <div class="jumbotron">
+      <div class = "container d-flex flex-column justify-content-start">
+         <h1 class="display-10 text-center">Restaurant Page </h1>
+         <hr class="my-10" color="black" >
+         <div class =" d-flex flex-row align-items-start justify-content-around ">
+            <div class = "d-flex flex-column justify-content-between border">
+               <div class="card" style="width: 20rem;">
+                  <img class="card-img-top" src="https://www.w3schools.com/images/picture.jpg" alt="Card image cap">
+                  <div class="card-body">
+                     <h5 class="card-title">Contact Us </h5>
+                     <p class="card-text">Phone: </p>
+                     <p class="card-text">Email: </p>
+                     <p class="card-text">Website: </p>
+                     <a href="#" class="btn btn-primary">order Now</a>
+                  </div>
+               </div>
+               <div class =" d-flex flex-row align-items-baseline justify-content-start ">
+                  <p > More</p>
+                  <hr width = 250 color=#666;>
+               </div>
+               <h2> BASING</h2>
+               <p> 123123 street </p>
+               <p> Earth 2020 </p>
+               <div class =" d-flex flex-row align-items-baseline ">
+                  <p > Location</p>
+                  <hr class="my-10" width = 250 color=#666;>
+               </div>
+               <h2> BASING</h2>
+               <p> 123123 street </p>
+               <p> Earth 2020 </p>
             </div>
-        </div>
-    </div>
-
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            <!-- CSS only for bootstrap-->
-
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        </body>
-    </html>
+            <div class = "d-flex flex-column">
+               <h1 class =text-center> Restaurant : <%= people.name %> </h1>
+               <div id="carouselExampleFade" data-interval="3000" class="carousel slide-fade" data-ride="carousel">
+                  <div class="carousel-inner">
+                     <div class="carousel-item active">
+                        <img src="https://www.w3schools.com/images/picture.jpg"class="d-block w-100" width:auto height=400px  alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                           <h2>Slide 1 </h2>
+                           <p>Random pic</p>
+                        </div>
+                     </div>
+                     <div class="carousel-item">
+                        <img src="https://vignette.wikia.nocookie.net/fairlyoddparents/images/e/e9/ChipSkylark.png/revision/latest/scale-to-width-down/340?cb=20180427164456&path-prefix=en"class="d-block w-100" width:auto height=400px  alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                           <div class="p-3 h2 mb-2 bg-dark text-white">
+                              <h2>Second Label</h2>
+                              <p> Shiny teeth an me</p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                  </a>
+               </div>
+               <div class = "d-flex flex-row align-items-center ">
+                  <h1>Star Rating </h1>
+                  <span class="fa fa-star checked ml-3"></span>
+                  <span class="fa fa-star checked ml-3"></span>
+                  <span class="fa fa-star checked ml-3"></span>
+                  <span class="fa fa-star ml-3"></span>
+                  <span class="fa fa-star ml-3"></span>
+               </div>
+               <div class = "d-flex flex-column justify-content-between">
+                  <div class = "d-flex flex-row align-items-center justify-content-start">
+                     <a class="btn btn-primary btn-lg" href="#" role="button">About </a>
+                     <a class="btn btn-primary btn-lg" href="#" role="button">More</a>
+                  </div>
+               </div>
+               <hr class="my-10" width = 500px color=#666;>
+               <div class = "d-flex flex-row align-items-center justify-content-between">
+                  <h1> History </h1>
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Edit </a>
+               </div>
+               <hr class="my-10" width = 500px color=#666;>
+               <div class = "d-flex flex-row align-items-center justify-content-between">
+                  <h1> Stories </h1>
+                  <a class="btn btn-primary btn-lg" href="#" role="button">Edit </a>
+               </div>
+            </div>
+         </div>
+      </div>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!-- CSS only for bootstrap-->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+   </body>
+</html>
