Minor update to photo upload form

--- a/views/PhotoUpload.ejs
+++ b/views/PhotoUpload.ejs
@@ -44,9 +44,23 @@
 					<form class="form-group">
 
 						<br>
+						<div class="row">
+							<div class="col-lg-6">
+								<label>Food item:</label>
+								<input type="text" id="name" name="name" class="form-control" placeholder="Enter food item">
+							</div>
+
+							<div class="col-lg-6">
+								<label>Price:</label>
+								<input type="text" id="price" name="price" class="form-control" placeholder="Enter food item price">
+							</div>
+							
+						</div>
 						<br>
+						<label>Description</label>
+						<input type="text" id="description" name="description" class="form-control" placeholder="Enter description">
 						<br>
-						<input type="file" id="read-file" />
+						<input type="file" id="imageLink" />
 						<br>
 						<br>
 
