added reading from uploads folder still needs testing

--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -100,17 +100,17 @@
             <% for (var i =0; i <restaurantInfo.foodItems.length;  i++ ) { %>
             <div class = "d-flex flex-row align-items-center justify-content-between">
                <div class="card" style="width: 15rem;">
-                  <img class="card-img-top" src="./uploads/a.jpg" alt="Mountain">
+                  <img class="card-img-top" src="../uploads/download.jfif" height=250vw object-fit=cover alt="Mountain">
                   <div class="card-body">
                    <h5 class="card-title"> <%=restaurantInfo.foodItems[i].name %></h5>
                    <p class="card-text"><%=restaurantInfo.foodItems[i].description %> </h5>
                      <h5 class="card-text"><%=restaurantInfo.foodItems[i].price %> </h5>
-
                   </div>
                </div>
             </div>
             <%#  will output the numbers 1-10 %>
             <% } %>
+
          </div>
       </div>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
