--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -1,60 +1,58 @@
-    <html>
+<html>
+    <head>
+        <title><%= restaurant.name %></title>
+        <!-- JS, Popper.js, and jQuery (Bootstrap files) -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link rel="stylesheet" href="/stylesheets/profilePage.css">
+    </head>
 
-
-        <head>
-
-            <title><%= restaurant.name %></title>
-            <!-- JS, Popper.js, and jQuery (Bootstrap files) -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-             <link rel="stylesheet" href="/stylesheets/profilePage.css">
-        </head>
-
-        <body>
-        <div style="width:100%;" >
-            <div class = "container d-flex flex-column justify-content-start">
-                <br><br>
-                <h1 class="display-10 text-center" style="margin-bottom: 1%;"> <%= restaurant.name %> </h1>
-                <h4 class="display-10 text-center" style="margin-bottom: 3%; font-weight: 350;"> 
-                    <% if (restaurant.rating == 0) { %>
-                        No Ratings Yet (0) &nbsp;&nbsp;|&nbsp;&nbsp;  Pricing: <%= restaurant.pricing %>/4 &nbsp;&nbsp;|&nbsp;&nbsp; 
-                    <% } else { %> 
-                        Rating: <%= restaurant.rating %>/5  &nbsp;&nbsp;|&nbsp;&nbsp;  Pricing: <%= restaurant.pricing %>/4 &nbsp;&nbsp;|&nbsp;&nbsp;
-                    <% } %>
-                    <a class="btn btn-outline-primary" href="#" role="button">Order Now</a>
-                </h4>
-                <div class =" d-flex flex-row align-items-start justify-content-around ">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="https://www.w3schools.com/images/picture.jpg" alt="Card image cap" style="height:8em; object-fit: cover;">
-                            <div class="card-body">
-                                <div class="restaurantInfo restaurantInfoTitle">Phone Number</div>
-                                <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.phoneNumber %></div>
-                                <div class="restaurantInfo restaurantInfoTitle">Restaurant Address</div>
-                                <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.address %> </div>
-                                <div class="restaurantInfo restaurantInfoTitle"> Restaurant Owner </div>
-                                <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.title %> <%= restaurant.ownerFirstName %> <%= restaurant.ownerLastName %></div>
-                                <br>
-                                <a class="btn btn-outline-primary btn-sm" href="#" role="button">More Info</a>
-                            </div>
+    <body>
+    <%- include('./partials/navbar.ejs') %>
+    <div style="width:100%;" >
+        <div class = "container d-flex flex-column justify-content-start">
+            <br><br>
+            <h1 class="display-10 text-center" style="margin-bottom: 1%;"> <%= restaurant.name %> </h1>
+            <h4 class="display-10 text-center" style="margin-bottom: 3%; font-weight: 350;"> 
+                <% if (restaurant.rating == 0) { %>
+                    No Ratings Yet (0) &nbsp;&nbsp;|&nbsp;&nbsp;  Pricing: <%= restaurant.pricing %>/4 &nbsp;&nbsp;|&nbsp;&nbsp; 
+                <% } else { %> 
+                    Rating: <%= restaurant.rating %>/5  &nbsp;&nbsp;|&nbsp;&nbsp;  Pricing: <%= restaurant.pricing %>/4 &nbsp;&nbsp;|&nbsp;&nbsp;
+                <% } %>
+                <a class="btn btn-outline-primary" href="#" role="button">Order Now</a>
+            </h4>
+            <div class =" d-flex flex-row align-items-start justify-content-around ">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="https://www.w3schools.com/images/picture.jpg" alt="Card image cap" style="height:8em; object-fit: cover;">
+                        <div class="card-body">
+                            <div class="restaurantInfo restaurantInfoTitle">Phone Number</div>
+                            <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.phoneNumber %></div>
+                            <div class="restaurantInfo restaurantInfoTitle">Restaurant Address</div>
+                            <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.address %> </div>
+                            <div class="restaurantInfo restaurantInfoTitle"> Restaurant Owner </div>
+                            <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.title %> <%= restaurant.ownerFirstName %> <%= restaurant.ownerLastName %></div>
+                            <br>
+                            <a class="btn btn-outline-primary btn-sm" href="#" role="button">More Info</a>
                         </div>
-                        <div class = "d-flex flex-column" style="width: 70%;">
-                        <div class = "d-flex flex-row align-items-center justify-content-between" style=" padding: 2% 0 2% 0; border-bottom: black solid 1px;">
-                            <h3> Stories </h3>
-                            <a class="btn btn-outline-success" href="#" role="button">Add New </a>
-                        </div>
-                        <div class = "d-flex flex-row align-items-center justify-content-between" style=" padding: 2% 0 2% 0; border-bottom: black solid 1px;">
-                            <h3> Posts </h3>
-                            <a class="btn btn-outline-success" href="#" role="button">Add New</a>
-                        </div>
-            </div>
+                    </div>
+                    <div class = "d-flex flex-column" style="width: 70%;">
+                    <div class = "d-flex flex-row align-items-center justify-content-between" style=" padding: 2% 0 2% 0; border-bottom: black solid 1px;">
+                        <h3> Stories </h3>
+                        <a class="btn btn-outline-success" href="#" role="button">Add New </a>
+                    </div>
+                    <div class = "d-flex flex-row align-items-center justify-content-between" style=" padding: 2% 0 2% 0; border-bottom: black solid 1px;">
+                        <h3> Posts </h3>
+                        <a class="btn btn-outline-success" href="#" role="button">Add New</a>
+                    </div>
         </div>
     </div>
+</div>
 
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-            <!-- CSS only for bootstrap-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- CSS only for bootstrap-->
 
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        </body>
-    </html>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    </body>
+</html>
