basic customer profile page needs Ui work

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -15,8 +15,8 @@
             <hr class="my-4">
             <p>New or Returning user?</p>
             <span id="customerBtns">
-                <a class="btn btn-primary" href="#" role="button">Customer Sign Up</a>
-                <a class="btn btn-success" href="#" role="button">Customer Login In</a>
+                <a class="btn btn-primary" href="/customerSignup/"  role="button">Customer Sign Up</a>
+                <a class="btn btn-success" href="/customerProfile/:customerId"role="button">Customer Login In</a>
             </span>
             <span id="restaurantBtns">
                 <a class="btn btn-primary" href="/restaurantSignup/" role="button">Restaurant Sign Up</a>
