completed front end UI for the nav bar, no testing needed as it only required sanity tested

--- a/views/Partials/navbar.ejs
+++ b/views/Partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Scarborough Dining</a>
+    <a class="navbar-brand" href="/">Scarborough Dining</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,8 +10,13 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <form style="width:30%; float: right;" class="form-inline my-2 my-lg-0">
-        <input style="width:80% ; float: left;" class="form-control mr-sm-2" type="search" placeholder="Search For Restaurant" aria-label="Search">
+      <form style="width:37%; float: right;" class="form-inline my-2 my-lg-0">
+        <input name="searchContent" style="width:50% ; float: left;" class="form-control mr-sm-2" type="search" placeholder="Search For Restaurant" aria-label="Search">
+        <select name="sortBy"  style="width: 30%; float: left;" class="form-control mr-sm-2">
+            <option value="priceLH">Price (Low to High)</option>
+            <option value="priceLH">Price (High to Low)</option>
+            <option value="rating">Rating</option>
+        </select>
         <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
