--- a/views/Registration_Form.ejs
+++ b/views/Registration_Form.ejs
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Registration</title>
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 <style type="text/css">
 	#ui{
@@ -24,13 +25,11 @@
 
 </head>
 <body>
-
+	<%- include('./partials/navbar.ejs') %>
 	<div class="container">
 
 		<div class="row">
-
-			<div class="col-lrg-3"></div>
-			<div class="col-lrg-6">
+			<div style="width: 100%">
 				<div id="ui">
 					<h1 class="text-center">REGISTRATION FORM</h1>
 					<br>
@@ -50,13 +49,13 @@
 						</div>
 						<br>
 
-						<label>Address</label>
+						<label>Address:</label>
 						<input type="text" name="address" class="form-control" placeholder="Enter your address">
 						<br>
-						<label>Pricing (On a scale from 1-4, where 1 is very affordable, and 4 is fine dining)</label>
+						<label>Pricing (On a scale from 1-4, where 1 is very affordable, and 4 is fine dining):</label>
 						<input type="number" name="pricing" class="form-control" value="1" min="1" max="4">
-
-						<h3 class="text-center">Owner Information</h3>
+						<br>
+						<h3>Owner Information</h3>
 						<br>
 
 						<div class="row">
@@ -102,7 +101,7 @@
 						<br>
 						<br>
 
-						<input type="submit" name="submit" value="submit" class="btn btn-primary btn-block btn-lg">
+						<input type="submit" name="submit" value="Submit" class="btn btn-primary btn-block btn-lg">
 
 						
 					</form>
