--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <%- include('./partials/navbar.ejs') %>
         <div class="jumbotron">
             <h1 class="display-4">Scarborough Dining</h1>
             <p class="lead">Connecting Torontonians to local food stops in Scarborough</p>
