--- a/public/stylesheets/profilePage.css
+++ b/public/stylesheets/profilePage.css
@@ -1,3 +1,6 @@
+body, html {
+  height: 100%;
+}
 .checked {
             color: orange;
          }
@@ -9,4 +12,57 @@
     color:white;
     background-color: #3C3D3F;
     border-radius: 7px 7px 0px 0px;
+}
+.bg {
+  /* The image used */
+  background-image: url('https://mdbootstrap.com/img/Photos/Others/architecture.jpg');
+
+  /* Full height */
+  height: 50%;
+  width: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.complex_form{
+    margin-top:40px;
+    margin-left:20px;
+    border-radius: 10px;
+    border: 2px #3C3D3F solid;
+    padding:20px 10px 10px 10px;
+    display:flex;
+    flex-direction: column;
+    width: 100%
+}
+
+.complex_form .form_title{
+    font-size:20px;
+    font-weight:bold;
+    margin:-20px -10px 20px -10px;
+    padding:10px 0px 10px 25px;
+    color:white;
+    background-color: #3C3D3F;
+    border-radius: 7px 7px 0px 0px;
+}
+
+
+.complex_form .form_element{
+     margin-bottom:10px;
+     font-size: 20px;
+     border-radius:10px;
+     padding:5px 10px 5px 10px;
+}
+
+/* This snippet of code was generated using: http://css3buttongenerator.com/ */
+
+.btn{
+    border-radius:10px;
+    text-align:center;
+    font-size: 20px;
+    color: #3C3D3F;
+    background: #ffffff;
+    border: 2px #3C3D3F solid;
+    padding: 10px 20px 10px 20px;
 }
