--- a/views/Registration_Form.ejs
+++ b/views/Registration_Form.ejs
@@ -55,7 +55,10 @@
 						<label>Pricing (On a scale from 1-4, where 1 is very affordable, and 4 is fine dining):</label>
 						<input type="number" name="pricing" class="form-control" value="1" min="1" max="4">
 						<br>
-						<h3>Owner Information</h3>
+						<label>Restaurant Tags (e.g "Burgers", "Chinese", etc. ). Separate tags using a comma:</label>
+						<input type="text" name="tags" class="form-control">
+						<br>
+						<h2 style="color: white;">Owner Information</h2>
 						<br>
 
 						<div class="row">
