--- a/public/stylesheets/profilePage.css
+++ b/public/stylesheets/profilePage.css
@@ -30,8 +30,7 @@ body, html {
     margin-top:40px;
     margin-left:20px;
     border-radius: 10px;
-    border: 2px #3C3D3F solid;
-    padding:20px 10px 10px 10px;
+    padding: 10px;
     display:flex;
     flex-direction: column;
     width: 100%
@@ -39,30 +38,23 @@ body, html {
 
 .complex_form .form_title{
     font-size:20px;
+    margin-bottom: 20px;
     font-weight:bold;
-    margin:-20px -10px 20px -10px;
-    padding:10px 0px 10px 25px;
+    text-align: center;
     color:white;
     background-color: #3C3D3F;
-    border-radius: 7px 7px 0px 0px;
+
 }
 
 
 .complex_form .form_element{
      margin-bottom:10px;
      font-size: 20px;
-     border-radius:10px;
-     padding:5px 10px 5px 10px;
+     border-radius:15px;
+
+}
+.complex_form .button{
+ background-color: #008CBA;
+ margin-top: 20px;
 }
 
-/* This snippet of code was generated using: http://css3buttongenerator.com/ */
-
-.btn{
-    border-radius:10px;
-    text-align:center;
-    font-size: 20px;
-    color: #3C3D3F;
-    background: #ffffff;
-    border: 2px #3C3D3F solid;
-    padding: 10px 20px 10px 20px;
-}
