Customer Form changes for Bio and address

--- a/views/Customer_Form.ejs
+++ b/views/Customer_Form.ejs
@@ -40,7 +40,15 @@
                            <label>Last name:</label>
                            <input type="text" name="customerLastName" class="form-control" placeholder="Enter your last name">
                         </div>
-                     </div>
+                        <div class="col-lg-6 pt-3">
+                            <label class = " mb-3">Bio:</label>
+                             <textarea  class="form_element" style="margin: 0px; width: 541px; height: 113px" name="customerBio" placeholder="Enter your bio"></textarea>
+                        </div>
+                        <div class="col-lg-6">
+                                                   <label>Adress:</label>
+                                                   <input type="text" name="customerAddress" class="form-control" placeholder="Enter your last name">
+                                                </div>
+                       </div>
                      <br>
                      <div class="row">
                         <div class="col-lg-6">
@@ -51,6 +59,10 @@
                             <label> Twitter (optional) :</label>
                            <input type="text" name="twitterUrl" class="form-control" placeholder="Enter your Facebook Url">
                          </div>
+                         <div class="col-lg-6">
+                                                     <label> Linkedin (optional) :</label>
+                                                    <input type="text" name="linkedinUrl" class="form-control" placeholder="Enter your LinkedinUrl">
+                                                  </div>
                         <div class="col-lg-6">
                            <label>E-mail:</label>
                            <input type="text" name="ownerEmail" class="form-control" placeholder="Enter your Twitter Url">
