--- a/public/stylesheets/profilePage.css
+++ b/public/stylesheets/profilePage.css
@@ -33,7 +33,8 @@ body, html {
     padding: 10px;
     display:flex;
     flex-direction: column;
-    width: 100%
+    height: 75%;
+    width: 100%;
 }
 
 .complex_form .form_title{
