--- a/views/Registration_Form.ejs
+++ b/views/Registration_Form.ejs
@@ -38,22 +38,22 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Restaurant:</label>
-								<input type="text" name="name" class="form-control" placeholder="Enter your restaurant name">
+								<input  required="required" type="text" name="name" class="form-control" placeholder="Enter your restaurant name">
 							</div>
 
 							<div class="col-lg-6">
 								<label>Business phone:</label>
-								<input type="text" name="phoneNumber" class="form-control" placeholder="Enter your business phone">
+								<input required="required" type="text" name="phoneNumber" class="form-control" placeholder="Enter your business phone">
 							</div>
 							
 						</div>
 						<br>
 
 						<label>Address:</label>
-						<input type="text" name="address" class="form-control" placeholder="Enter your address">
+						<input required="required" type="text" name="address" class="form-control" placeholder="Enter your address">
 						<br>
 						<label>Pricing (On a scale from 1-4, where 1 is very affordable, and 4 is fine dining):</label>
-						<input type="number" name="pricing" class="form-control" value="1" min="1" max="4">
+						<input required="required" type="number" name="pricing" class="form-control" value="1" min="1" max="4">
 						<br>
 						<label>Restaurant Tags (e.g "Burgers", "Chinese", etc. ). Separate tags using a comma:</label>
 						<input type="text" name="tags" class="form-control">
@@ -64,12 +64,12 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>First name:</label>
-								<input type="text" name="ownerFirstName" class="form-control" placeholder="Enter your first name">
+								<input required="required" type="text" name="ownerFirstName" class="form-control" placeholder="Enter your first name">
 							</div>
 
 							<div class="col-lg-6">
 								<label>Last name:</label>
-								<input type="text" name="ownerLastName" class="form-control" placeholder="Enter your last name">
+								<input required="required" type="text" name="ownerLastName" class="form-control" placeholder="Enter your last name">
 							</div>
 							
 						</div>
@@ -77,12 +77,12 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Title:</label>
-								<input type="text" name="ownerTitle" class="form-control" placeholder="Enter your title">
+								<input required="required" type="text" name="ownerTitle" class="form-control" placeholder="Enter your title">
 							</div>
 
 							<div class="col-lg-6">
 								<label>E-mail:</label>
-								<input type="text" name="ownerEmail" class="form-control" placeholder="Enter your E-mail">
+								<input required="required" type="text" name="ownerEmail" class="form-control" placeholder="Enter your E-mail">
 							</div>
 							
 						</div>
@@ -91,12 +91,12 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Phone number:</label>
-								<input type="text" name="ownerPhoneNumber" class="form-control" placeholder="Enter your phone number">
+								<input required="required" type="text" name="ownerPhoneNumber" class="form-control" placeholder="Enter your phone number">
 							</div>
 
 							<div class="col-lg-6">
 								<label>Password:</label>
-								<input type="password" name="password" class="form-control" placeholder="Enter your password">
+								<input required="required" type="password" name="password" class="form-control" placeholder="Enter your password">
 							</div>
 
 							
@@ -104,7 +104,7 @@
 						<br>
 						<br>
 
-						<input type="submit" name="submit" value="Submit" class="btn btn-primary btn-block btn-lg">
+						<input required="required" type="submit" name="submit" value="Submit" class="btn btn-primary btn-block btn-lg">
 
 						
 					</form>
