--- a/views/search.ejs
+++ b/views/search.ejs
@@ -11,14 +11,13 @@
     <body>
             <%- include('./partials/navbar.ejs') %>
             <br>
-            <h3 style="margin-left: 2%;">Search Results for: "<%= search %>"</h3>
+            <h3 style="margin-left: 2%;">Search Results for: "<%= search %>" <span style="font-size: large; color: #636363">by <%= param %></span></h3>
             <br>
-            <div style="width: 80%; display: table;"></div>
             <% for(i = 0; i < rests.length ; i++) { %>
                 <div style="float: left; width: 25%; margin: 2% 2% 2% 2%; border: #999999 solid 1px; border-radius: 5px;">
                     <a href="/restaurantProfile/<%= rests[i].nameSpaced.replace(/\s/g, '-')%>">
                     <img src="https://www.w3schools.com/images/picture.jpg" style="height: 20%; width: 100%; object-fit: cover; margin-bottom: 2%;">
-                    <div style="padding: 1% 2% 1% 2%;">
+                    <div style="padding: 1% 2% 1% 2%; color: #636363">
                         <h5 class="card-title"><%= rests[i].nameSpaced %></h5>
                         
                         <p class="card-text">
@@ -32,17 +31,16 @@
                             <% for(j = 0; j < rests[i].tags.length; j++ ){ %>
                                 <% if(j == 3){ %>
                                 <%     break; %>
+                                <% } else if (j == 2 || j == rests[i].tags.length-1 ) {%>
+                                    <%= rests[i].tags[j]%>
+                                <% } else {%>
+                                    <%= rests[i].tags[j]%> &nbsp;&middot;&nbsp;
                                 <% } %>
-                                    <button style="pointer-events: none;" type="button" class="btn btn-outline-secondary btn-sm"><%= rests[i].tags[j]%></button>
-
-                                
                             <% } %>
                         </p>
                         <p class="card-text"><small class="text-muted"><%= rests[i].address %></small></p>
                     </div>    
                     </a>
-                    
-                    
                 </div>
             <% } %>
         </div>
