Updated restuarant profile to show stories from DB

--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -42,6 +42,9 @@
                         <h3> Stories </h3>
                         <a class="btn btn-outline-success" href="/storyUploader/<%=restaurant.nameSpaced.replace(/ /g, "-")%>" role="button">Add New </a>
                     </div>
+                    <% restaurant.stories.forEach(story => {%>
+                        <p><%=story.text%></p>
+                    <% }); %>
                     <div class = "d-flex flex-row align-items-center justify-content-between" style=" padding: 2% 0 2% 0; border-bottom: black solid 1px;">
                         <h3> Posts </h3>
                         <a class="btn btn-outline-success" href="#" role="button">Add New</a>
