Fixed issue with ordering of path params

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -17,11 +17,11 @@
             <p>New or Returning user?</p>
             <span id="customerBtns">
                 <a class="btn btn-primary" href="/customerSignup/"  role="button">Customer Sign Up</a>
-                <a class="btn btn-success" href="/customerProfile/:customerFirstName/:customerLastName"role="button">Customer Login In</a>
+                <a class="btn btn-success" href="/:customerFirstName/:customerLastName/customerProfile"role="button">Customer Login In</a>
             </span>
             <span id="restaurantBtns">
                 <a class="btn btn-primary" href="/restaurantSignup/" role="button">Restaurant Sign Up</a>
-                <a class="btn btn-success" href="/restuarantProfile/:restaurant" role="button">Restaurant Login In</a>
+                <a class="btn btn-success" href="/:restaurant/restuarantProfile" role="button">Restaurant Login In</a>
             </span>
         </div>
 
