--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -59,7 +59,7 @@
                             </li>
                 <% }}}; %>
             </ul>
-            <button class="btn btn-lg btn-success float-right">Checkout</button>
+            <a role="button" class="btn btn-lg btn-success float-right" href="/construction">Checkout</a>
         </div>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
